cmake_minimum_required(VERSION 3.0)
project(CPU)

set(CPU_VERSION_MAJOR 0)
set(CPU_VERSION_MINOR 0)
set(CPU_VERSION_PATCH 0)
set(CPU_VERSION ${CPU_VERSION_MAJOR}.${CPU_VERSION_MINOR}.${CPU_VERSION_PATCH})
MESSAGE("CPU_VERSION=${CPU_VERSION}")

set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "-Wall -Werror -Wl,--no-undefined")
set(CMAKE_CXX_FLAGS_DEBUG "-D_DEBUG -g")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -DNDEBUG -g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")

message("build type: ${CMAKE_BUILD_TYPE}")
if (NOT CMAKE_BUILD_TYPE)
		set(CMAKE_BUILD_TYPE "Release")
endif()
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
		enable_testing()
    add_subdirectory(test)
endif()

set(PREFIX_PATH ${CMAKE_BINARY_DIR}/cpu_${CPU_VERSION}/${CMAKE_BUILD_TYPE})
message("PREFIX_PATH: ${PREFIX_PATH}")
set(CMAKE_INSTALL_PREFIX "${PREFIX_PATH}")
message("ORIGIN: ${ORIGIN}")
set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")

add_subdirectory(src)

install(DIRECTORY DESTINATION ${PREFIX_PATH})
